--- a/curd_opration/app/templates/app/dashbord.html
+++ b/curd_opration/app/templates/app/dashbord.html
@@ -10,6 +10,8 @@
                 href="#list-messages" role="tab" aria-controls="messages">query</a>
             <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list"
                 href="#list-settings" role="tab" aria-controls="settings">Query Delete/Update</a>
+            <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list"
+                href="#list-Search" role="tab" aria-controls="settings">Search Query</a>
         </div>
     </div>
     <div class="col-8 shadow-sm">
@@ -130,6 +132,53 @@
                     </tbody>
                 </table>
             </div>
+            <div class="tab-pane fade" id="list-Search" role="tabpanel" aria-labelledby="list-settings-list">
+                <h1 class="text-center animate__animated animate__fadeInDown">Search Query Data</h1>
+                  <table class="table table-hover">
+                      <thead class="thead-dark">
+                          <tr>
+                           
+                              <th scope="col">Query</th>
+                             
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr> 
+                            
+                           
+                            <form class="row g-3" action="{% url 'search' %}" method="post">
+                                {% csrf_token %}
+                                <td scope="row">
+                                    <div class="col-auto">
+                                        <input type="search" name="search" class="form-control">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="col-auto">
+                                        <button type="submit" class="btn btn-outline-primary">Search</button>
+                                    </div>
+                                </td>
+                            </form>
+                        </tr>
+                    </tbody>
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Email</th>
+                            <th scope="col">Query</th> 
+                        </tr>
+                    </thead>
+                            
+                    <tbody>
+                       {% for item in key1 %}
+                           <tr>
+                               <th scope="row">{{ item.qemail }}</th>
+                               <td>{{ item.qname }}</td>
+                           </tr>
+                       {% endfor %}
+                    </tbody>
+                            
+                  </table>
+              </div>
         </div>
     </div>
 </div>
